--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,11 +35,10 @@ endforeach(dir)
 ## Testing ##
 #############
 
-## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_pal_carbon_collector.cpp)
-# if(TARGET ${PROJECT_NAME}-test)
-#   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
-# endif()
+if (CATKIN_ENABLE_TESTING)
 
-## Add folders to be run by python nosetests
-# catkin_add_nosetests(test)
+    find_package(rostest REQUIRED)
+
+    add_rostest(test/carbon_collector.test)
+
+endif()
