--- a/package.xml
+++ b/package.xml
@@ -16,4 +16,6 @@
   <exec_depend>python-graphitesend</exec_depend>
   <exec_depend>rospy</exec_depend>
 
+  <test_depend>rostest</test_depend>
+
 </package>
