--- a/pal_carbon_collector/package.xml
+++ b/pal_carbon_collector/package.xml
@@ -6,7 +6,7 @@
 
   <maintainer email="jordan.palacios@pal-robotics.com">Jordan Palacios</maintainer>
 
-  <license>Proprietary</license>
+  <license>LGPLv3</license>
 
   <author email="jordan.palacios@pal-robotics.com">Jordan Palacios</author>
 
