--- a/pal_statsd_collector/package.xml
+++ b/pal_statsd_collector/package.xml
@@ -16,4 +16,6 @@
   <exec_depend>python-statsd</exec_depend>
   <exec_depend>rospy</exec_depend>
 
+  <test_depend>rostest</test_depend>
+
 </package>
