--- a/pal_statistics/CMakeLists.txt
+++ b/pal_statistics/CMakeLists.txt
@@ -27,6 +27,7 @@ include_directories(include)
 
 ## Declare a C++ library
 add_library(${PROJECT_NAME}
+  src/pal_statistics_utils.cpp
   src/pal_statistics.cpp
   src/pal_statistics_macros.cpp
 )
