--- a/pal_statistics/package.xml
+++ b/pal_statistics/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="victor@todo.todo">victor</maintainer>
+  <maintainer email="victor.lopez@pal-robotics.com">victor</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
