--- a/pal_statistics/package.xml
+++ b/pal_statistics/package.xml
@@ -53,6 +53,7 @@
   <depend>pal_statistics_msgs</depend>
   <depend>roscpp</depend>
   <depend>rospy</depend>
+  <depend>rosbag</depend>
   <test_depend>rostest</test_depend>
   <test_depend>google-mock</test_depend>
 
