Change License to MIT
fixes #5

--- a/pal_carbon_collector/package.xml
+++ b/pal_carbon_collector/package.xml
@@ -6,7 +6,7 @@
 
   <maintainer email="jordan.palacios@pal-robotics.com">Jordan Palacios</maintainer>
 
-  <license>LGPLv3</license>
+  <license>MIT</license>
 
   <author email="jordan.palacios@pal-robotics.com">Jordan Palacios</author>
 
