--- a/pal_statistics/package.xml
+++ b/pal_statistics/package.xml
@@ -12,8 +12,8 @@
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
-  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>LGPLv3</license>
+  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, MIT -->
+  <license>MIT</license>
 
 
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
