--- a/pal_statistics_msgs/package.xml
+++ b/pal_statistics_msgs/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package format="2">
+<package format="3">
   <name>pal_statistics_msgs</name>
   <version>1.4.0</version>
   <description>Statistics msgs package</description>
@@ -10,16 +10,16 @@
 
   <author email="jordan.palacios@pal-robotics.com">Jordan Palacios</author>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>rosidl_default_generators</buildtool_depend>
 
-  <build_depend>roscpp</build_depend>
   <build_depend>message_generation</build_depend>
-  <build_depend>std_msgs</build_depend>
 
-  <build_export_depend>std_msgs</build_export_depend>
+  <exec_depend>rosidl_default_runtime</exec_depend>
 
-  <exec_depend>roscpp</exec_depend>
-  <exec_depend>message_runtime</exec_depend>
-  <exec_depend>std_msgs</exec_depend>
+  <depend>std_msgs</depend>
 
+  <member_of_group>rosidl_interface_packages</member_of_group>
+  <export>
+    <build_type>ament_cmake</build_type>
+  </export>
 </package>
