Reorganize code to remove boost from include files

--- a/pal_statistics/CMakeLists.txt
+++ b/pal_statistics/CMakeLists.txt
@@ -22,6 +22,7 @@ add_library(${PROJECT_NAME}
   src/pal_statistics_utils.cpp
   src/pal_statistics.cpp
   src/pal_statistics_macros.cpp
+  src/registration_list.cpp
 )
 
 ament_target_dependencies(${PROJECT_NAME} 
@@ -53,6 +54,7 @@ if(BUILD_TESTING)
 	  ${PROJECT_NAME})
 
   ament_add_gmock(pal_statistics-test test/gtest_pal_statistics.cpp)
+  target_include_directories(pal_statistics-test PRIVATE src) #dirty hack for a forward declaration
   target_link_libraries(pal_statistics-test
           ${PROJECT_NAME})
                             
