--- a/pal_statistics/package.xml
+++ b/pal_statistics/package.xml
@@ -15,6 +15,8 @@
   <test_depend>rostest</test_depend>
   <test_depend>ament_cmake_gmock</test_depend>
   <test_depend>ament_cmake_gtest</test_depend>
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
   <test_depend>google-mock</test_depend>
 
 
