--- a/pal_statistics/package.xml
+++ b/pal_statistics/package.xml
@@ -10,15 +10,12 @@
 
   <depend>boost</depend>
   <depend>pal_statistics_msgs</depend>
-  <depend>roscpp</depend>
-  <depend>rospy</depend>
-  <test_depend>rostest</test_depend>
+  <depend>rclcpp</depend>
+  <depend>rclpy</depend>
   <test_depend>ament_cmake_gmock</test_depend>
   <test_depend>ament_cmake_gtest</test_depend>
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
-  <test_depend>google-mock</test_depend>
-
 
   <export>
     <build_type>ament_cmake</build_type>
