--- a/pal_carbon_collector/CMakeLists.txt
+++ b/pal_carbon_collector/CMakeLists.txt
@@ -1,10 +1,7 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(pal_carbon_collector)
 
-find_package(catkin REQUIRED
-    COMPONENTS
-        pal_statistics_msgs
-)
+find_package(catkin REQUIRED)
 
 catkin_python_setup()
 
