--- a/pal_statistics/CMakeLists.txt
+++ b/pal_statistics/CMakeLists.txt
@@ -14,7 +14,7 @@ find_package(Boost REQUIRED COMPONENTS thread)
 
 catkin_package(
   INCLUDE_DIRS include
-  LIBRARIES ${PROJECT_NAME}
+  LIBRARIES ${PROJECT_NAME} extract_rosbag_signals
   CATKIN_DEPENDS pal_statistics_msgs roscpp
 #  DEPENDS Boost
 )
@@ -122,6 +122,12 @@ if (CATKIN_ENABLE_TESTING)
                                 ${catkin_LIBRARIES})
 
     add_rostest(test/pal_statistics_py.test)
+
+    add_rostest_gtest(extract_rosbag_signals-test test/extract_rosbag_signals_test.test test/extract_rosbag_signals_test.cpp)
+    target_link_libraries(extract_rosbag_signals-test
+                                extract_rosbag_signals
+                                ${PROJECT_NAME}
+                                ${catkin_LIBRARIES})
 endif(CATKIN_ENABLE_TESTING)
 ## Add gtest based cpp test target and link libraries
 # catkin_add_gtest(${PROJECT_NAME}-test test/test_pal_statistics.cpp)
