--- a/pal_statistics_msgs/package.xml
+++ b/pal_statistics_msgs/package.xml
@@ -15,6 +15,7 @@
   <exec_depend>rosidl_default_runtime</exec_depend>
 
   <depend>std_msgs</depend>
+  <test_depend>ament_lint_auto</test_depend>
 
   <member_of_group>rosidl_interface_packages</member_of_group>
   <export>
