--- a/pal_statistics_msgs/package.xml
+++ b/pal_statistics_msgs/package.xml
@@ -16,6 +16,7 @@
 
   <depend>std_msgs</depend>
   <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
 
   <member_of_group>rosidl_interface_packages</member_of_group>
   <export>
