--- a/pal_statistics_msgs/package.xml
+++ b/pal_statistics_msgs/package.xml
@@ -10,6 +10,7 @@
 
   <author email="jordan.palacios@pal-robotics.com">Jordan Palacios</author>
 
+  <buildtool_depend>ament_cmake</buildtool_depend>
   <buildtool_depend>rosidl_default_generators</buildtool_depend>
 
   <exec_depend>rosidl_default_runtime</exec_depend>
