--- a/pal_statistics/package.xml
+++ b/pal_statistics/package.xml
@@ -12,6 +12,7 @@
   <depend>boost</depend>
   <depend>pal_statistics_msgs</depend>
   <depend>rclcpp</depend>
+  <depend>rclcpp_lifecycle</depend>
   <depend>rclpy</depend>
   <test_depend>ament_cmake_gmock</test_depend>
   <test_depend>ament_cmake_gtest</test_depend>
