Add website tag

--- a/pal_statistics/package.xml
+++ b/pal_statistics/package.xml
@@ -9,6 +9,8 @@
 
   <license>MIT</license>
 
+  <url type="website">https://github.com/pal-robotics/pal_statistics</url>
+
   <buildtool_depend>ament_cmake_auto</buildtool_depend>
 
   <depend>boost</depend>
